[package]
name = "portlight"
version = "0.0.1"
authors = ["Micah Johnston <micahrjohnston@gmail.com>"]
edition = "2021"
description = "Cross-platform window management for audio plugins"
repository = "https://github.com/coupler-rs/portlight"
license = "MIT OR Apache-2.0"

[[test]]
name = "leak"
harness = false
required-features = ["_test"]

[features]
_test = []

[dependencies]

[target.'cfg(target_os = "windows")'.dependencies]
getrandom = "0.2.10"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.51.1"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
]

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6.2", features = ["catch-all"] }
objc2-io-surface = { version = "0.3.1" }
getrandom = "0.2.10"
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies.objc2-core-foundation]
version = "0.3.1"
default-features = false
features = [
    "CFDate",
    "CFDictionary",
    "CFNumber",
    "CFRunLoop",
    "CFCGTypes",
]

[target.'cfg(target_os = "macos")'.dependencies.objc2-foundation]
version = "0.3.1"
default-features = false
features = [
    "NSEnumerator",
    "NSThread",
]

[target.'cfg(target_os = "macos")'.dependencies.objc2-app-kit]
version = "0.3.1"
default-features = false
features = [
    "objc2-core-foundation",
    "NSApplication",
    "NSRunningApplication",
    "NSResponder",
    "NSView",
    "NSWindow",
    "NSScreen",
    "NSEvent",
    "NSCursor",
    "NSTrackingArea",
    "NSImage",
    "NSGraphics",
    "NSGraphicsContext",
]

[target.'cfg(target_os = "macos")'.dependencies.objc2-quartz-core]
version = "0.3.1"
default-features = false
features = [
    "objc2-core-foundation",
    "CALayer",
]

[target.'cfg(target_os = "macos")'.dependencies.objc2-core-video]
version = "0.3.1"
default-features = false
features = [
    "objc2-core-graphics",
    "CVBase",
    "CVDisplayLink",
    "CVPixelBuffer",
    "CVReturn",
]

[target.'cfg(target_os = "macos")'.dependencies.objc2-core-graphics]
version = "0.3.1"
default-features = false
features = [
    "CGColorSpace",
    "CGDirectDisplay",
]

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.12.0", features = ["cursor", "shm", "present"] }
libc = "0.2"
